k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ty-harness-demo-gateway
spec:
  selector:
    istio: ingressgateway      
  servers:
  - port:
      number: 80              
      name: http             
      protocol: HTTP
    hosts:
    - "*"                       
    # - ty-harness-demo-service.default.svc.cluster.local
